--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -657,7 +657,7 @@ ImportLinkedBranchWithoutRootAction.text=La carte li\u00E9e sans la racine
 ImportMindmanagerFiles.text=Carte MindManager X5...
 increase_branch_font_size=Augmenter la taille du texte de la branche
 IncreaseNodeFontAction.text=Augmenter la taille du texte
-internal_error_tooltip=Une erreur interne s''est produite. Pour plus de d\u00E9tails, consultez le dernier fichier log dans {0}.
+internal_error_tooltip=Freeplane a rencontr\u00E9 des erreurs. Pour consulter le dernier fichier log stock\u00E9 dans {0}, cliquez.
 invalid_export_file=Nom du fichier export\u00E9 invalide
 invalid_file_msg=Impossible de trouver le fichier {0}
 invalid_uri=URI invalide : {0}
