--- a/freeplane/resources/translations/Resources_pt_BR.properties
+++ b/freeplane/resources/translations/Resources_pt_BR.properties
@@ -1252,6 +1252,7 @@ OptionPanel.single_instance_force=Evitar uma segunda inst\u00E2ncia, em qualquer
 OptionPanel.single_instance_force.tooltip=Evitar uma segunda inst\u00E2ncia, mesmo se n\u00E3o h\u00E1 nenhum arquivo para carregar
 OptionPanel.sk=Eslovaco
 OptionPanel.sl=Sl
+OptionPanel.slow_scroll_selected_node=Rolagem lenta para n\u00F3 selecionado
 OptionPanel.spelling_opt_case_sensitive=Modo sensitivo
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignore todas as palavras de letras mai\u00FAsculas.
 OptionPanel.spelling_opt_ignore_capitalization=Ignorar letras capitalizadas no in\u00EDcio da palavra
@@ -1764,6 +1765,7 @@ UnfoldAllAction.text=Expandir todos
 UnfoldAllAction.tooltip=<html>Expande o n\u00F3 atual e todos os seus filhos.</html>
 UnfoldOneLevelAction.text=Expandir um n\u00EDvel
 UnfoldOneLevelAction.tooltip=Expande um n\u00EDvel dos n\u00F3s selecionados.
+unparsedLatexPatternFormat=LaTex n\u00E3o analisado
 up=S&ubir
 UpConditionAction.text=Para cima
 update_failed=Falha de atualiza\u00E7\u00E3o com mensagem {0}
