--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -1252,6 +1252,7 @@ OptionPanel.single_instance_force=Evitar uma segunda inst\u00E2ncia em qualquer 
 OptionPanel.single_instance_force.tooltip=Evitar uma segunda inst\u00E2ncia mesmo que n\u00E3o haja ficheiro a carregar
 OptionPanel.sk=Eslovaco / sloven\u010Dina
 OptionPanel.sl=Esloveno / sloven\u0161\u010Dina
+OptionPanel.slow_scroll_selected_node=Deslocar lentamente para o n\u00F3 selecionado
 OptionPanel.spelling_opt_case_sensitive=Distinguir mai\u00FAsculas/min\u00FAsculas
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignorar palavras em mai\u00FAsculas.
 OptionPanel.spelling_opt_ignore_capitalization=Ignorar mai\u00FAsculas no princ\u00EDpio da palavra
@@ -1764,6 +1765,7 @@ UnfoldAllAction.text=Desdobrar todos
 UnfoldAllAction.tooltip=<html>Desdobra os n\u00F3s selecionados e todos os seus n\u00F3s-filho.</html>
 UnfoldOneLevelAction.text=Desdobra um n\u00EDvel
 UnfoldOneLevelAction.tooltip=Desdobra os n\u00F3s selecionados um n\u00EDvel.
+unparsedLatexPatternFormat=LaTex n\u00E3o analisado
 up=Acima
 UpConditionAction.text=Acima
 update_failed=A atualiza\u00E7\u00E3o falhou com a mensagem {0}
