--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -1250,6 +1250,7 @@ OptionPanel.single_instance_force=\u7B2C\uFF12\u30A4\u30F3\u30B9\u30BF\u30F3\u30
 OptionPanel.single_instance_force.tooltip=\u8AAD\u307F\u8FBC\u307F\u30D5\u30A1\u30A4\u30EB\u304C\u306A\u3044\u5834\u5408\u3067\u3082\u3001\u7B2C\uFF12\u30A4\u30F3\u30B9\u30BF\u30F3\u30B9\u3092\u4F5C\u6210\u3057\u306A\u3044\u3088\u3046\u306B\u3057\u307E\u3059\u3002
 OptionPanel.sk=\u30B9\u30ED\u30D0\u30AD\u30A2\u8A9E\uFF0Fsloven\u010Dina
 OptionPanel.sl=\u30B9\u30ED\u30D9\u30CB\u30A2\u8A9E\uFF0Fsloven\u0161\u010Dina
+OptionPanel.slow_scroll_selected_node=\u9078\u629E\u30CE\u30FC\u30C9\u3092\u4E2D\u592E\u306B\u3059\u308B\u5834\u5408\u3001\u3086\u3063\u304F\u308A\u30B9\u30AF\u30ED\u30FC\u30EB
 OptionPanel.spelling_opt_case_sensitive=\u5927\u6587\u5B57\uFF0F\u5C0F\u6587\u5B57\u3092\u533A\u5225
 OptionPanel.spelling_opt_ignore_all_caps_words=\u5927\u6587\u5B57\u306E\u307F\u306E\u8A9E\u3092\u7121\u8996
 OptionPanel.spelling_opt_ignore_capitalization=\u8A9E\u306E\u5192\u982D\u306B\u3042\u308B\u5927\u6587\u5B57\u3092\u7121\u8996
