--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -1763,6 +1763,7 @@ UnfoldAllAction.text=\u3059\u3079\u3066\u5C55\u958B\u3059\u308B
 UnfoldAllAction.tooltip=\u9078\u629E\u4E2D\u306E\u30CE\u30FC\u30C9\u304B\u3089\u3001\u3059\u3079\u3066\u306E\u4E0B\u4F4D\u30CE\u30FC\u30C9\u3092\u5C55\u958B\u3057\u307E\u3059\u3002
 UnfoldOneLevelAction.text=\uFF11\u968E\u5C64\u5206\u3060\u3051\u5C55\u958B\u3059\u308B
 UnfoldOneLevelAction.tooltip=\u9078\u629E\u4E2D\u306E\u30CE\u30FC\u30C9\u304B\u3089\uFF11\u968E\u5C64\u5206\u3060\u3051\u5C55\u958B\u3057\u307E\u3059\u3002
+unparsedLatexPatternFormat=\u975E\u30D1\u30FC\u30B9 LaTeX
 up=\u4E0A\u3078(&U)
 UpConditionAction.text=\u4E0A\u3078
 update_failed=<html>\u30A2\u30C3\u30D7\u30C7\u30FC\u30C8\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002<br>\u53C2\u7167\u30E1\u30C3\u30BB\u30FC\u30B8\uFF1A {0}</html>
