Squashed rc-1.3.8-pre03
commit da396ad01534d12c9c3ef684ccd0bd5c680a2898
Merge: 9600a18 16ba26b
Author: dpolivaev <dpolivaev>
Date:   Sun Apr 27 10:58:26 2014 +0200

    Merge remote-tracking branch 'weblate/1.3.x' into 1.3.x

commit 9600a180470bbd682a4d77b6ea63c0f431eb2986
Author: dpolivaev <dpolivaev>
Date:   Sun Apr 27 10:51:44 2014 +0200

    copyright 2000-2014

commit 16ba26b31176fceb91989e68461ade67be0100e9
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Fri Apr 25 07:49:58 2014 +0200

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1810 of 1810 strings)

commit f9a8d0c69bb6b082252d6c3cefac061f2967afc8
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Fri Apr 25 07:45:03 2014 +0200

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1810 of 1810 strings)

commit 343e8f5a6621f6d81c20596f3a93017a0a3079e6
Merge: f6c6c9a ad02797
Author: Weblate <noreply@weblate.org>
Date:   Thu Apr 24 22:48:13 2014 +0200

    Merge remote-tracking branch 'origin/1.3.x' into 1.3.x

commit ad0279789532a42ba5e09250791fbb52c2eeb856
Author: Volker Boerchers <boercher@web.de>
Date:   Thu Apr 24 04:14:19 2014 +0200

    #2140: fix file filter for .groovy files to compile

commit 833b7b673fff42b014edf8502bd84d93f8ad4ab0
Author: dpolivaev <dpolivaev>
Date:   Tue Apr 22 18:05:39 2014 +0200

    2137: NullPointerException when opening "Edit Styles" dialog

commit f6c6c9ad8e502c9e2693e371bd826efb534253c4
Merge: 3944047 8827861
Author: Weblate <noreply@weblate.org>
Date:   Fri Apr 18 20:53:41 2014 +0200

    Merge remote-tracking branch 'origin/1.3.x' into 1.3.x

commit 39440476e78b8101f3a26abe89758c9d0c2ec56f
Author: Zdeněk Elis <vinilek@seznam.cz>
Date:   Thu Apr 17 16:26:24 2014 +0200

    Translated using Weblate (Czech)

    Currently translated at 79.0% (1431 of 1810 strings)

commit 882786112be604094190c2bab7d7e95de3b72dbf
Author: dpolivaev <dpolivaev>
Date:   Fri Apr 18 20:53:20 2014 +0200

    remove options show_note_icons an

--- a/freeplane/resources/translations/Resources_cs.properties
+++ b/freeplane/resources/translations/Resources_cs.properties
@@ -89,7 +89,7 @@ ApplyNoFilteringAction.text=Nefiltrov\u00E1no
 ApplySelectedViewConditionAction.text=Filtrovat vybran\u00E9 uzly
 ApplyToVisibleAction.text=Ap\u016Fikovat na filtrovan\u00E9 uzly
 as_parent=Jako nad\u0159azen\u00FD
-AskForHelp.text=Ask for Help[translate me]
+AskForHelp.text=Po\u017E\u00E1dat o pomoc v diskuzn\u00EDm f\u00F3ru
 AssignAttributesAction.text=P\u0159i\u0159adit atributy...
 attribute_delete=Smazat v\u0161echny hodnoty
 attribute_delete_value=Smazat tuto hodnotu
@@ -220,7 +220,7 @@ CopyAttributes.text=Kop\u00EDrovat &atributy
 CopyIDAction.text=Kop\u00EDrovat I&D uzlu
 CopyMapStylesAction.text=Kop\u00EDrovat styl mapy z...
 CopyNodeURIAction.text=Kop\u00EDrovat URI uzlu
-copyright=Copyright \u00A9 2000-2012 Freeplane t\u00FDm a dal\u0161\u00ED
+copyright=Copyright \u00A9 2000-2014 Freeplane t\u00FDm a dal\u0161\u00ED
 CopySingleAction.text=Kop\u00EDrovat samostatn\u011B
 CopySingleAction.tooltip=Kop\u00EDrovat vybran\u00FD uzel
 CopyStyleExtensionsAction.text=Kop\u00EDrovat roz\u0161\u00ED\u0159en\u00ED ze stylu uzlu
@@ -671,7 +671,9 @@ JoinNodesAction.text=Spojit uzly
 latex_editor=Editace LaTeX vzorce
 LatexDeleteLatexAction.text=Odstran\u011Bn\u00ED LaTe&X vzorce
 LatexEditLatexAction.text=Editace &LaTeX vzorce...
+LatexInsertLatexAction.msg1=<html>Pokou\u0161\u00EDte se vlo\u017Eit <i>zastaral\u00E9</i> LaTeX vzorce. <br/>Nov\u00FD zp\u016Fsob, jak vytvo\u0159it text LaTeXu, je pops\u00E1n na t\u00E9to str\u00E1nce:</html>
 LatexInsertLatexAction.text=P\u0159id\u00E1n\u00ED &LaTeX vzorce...
+latexPatternFormat=LaTeX
 less_than_two_selected_nodes=Mus\u00EDte vybrat alespo\u0148 dva uzly, aby se mohly vytvo\u0159it odkazy.
 license=Licence: GPL 2 nebo nov\u011Bj\u0161\u00ED
 link_error=Nespr\u00E1vn\u00E9 odkaz "{0}" nebyl na\u010Dten
@@ -766,6 +768,7 @@ menu_nodes=&Uzly
 menu_nodeView=J\u00E1dro uzlu
 menu_notes=Pozn\u00E1mka
 menu_noteView=Pozn\u00E1mky
+menu_openmaps=Mapy
 menu_progress=Ikona pr\u016Fb\u011Bhu (%)
 menu_remove_icons=Odstranit ikony
 menu_removeAttribute=Odstranit atribut
@@ -834,6 +837,7 @@ NextNodeAction.FORWARD_N_FOLD.text=Goto dal\u0161\u00ED uzel (slo\u017Eit)
 NextPresentationItemAction.text=Rozlo\u017Eit dal\u0161\u00ED polo\u017Eku prezentace
 no=Ne
 no_copy_attributes_before_paste_attributes=Nem\u016F\u017Eete vlo\u017Eit atributy, dokud n\u011Bjak\u00E9 nezkop\u00EDrujete.
+NO_FORMAT=Text
 no_format_copy_before_format_paste=Nem\u016F\u017Eete aplikovat form\u00E1t, dokud ho nezkop\u00EDrujete.
 no_found_from=<html>V "{1}" nebyl nalezen \u017E\u00E1dn\u00FD v\u00FDraz <u>{0}</u>.</html>
 no_more_found_from=<html>Od "{1}" u\u017E nebyl nalezen \u017E\u00E1dn\u00FD dal\u0161\u00ED v\u00FDraz <u>{0}</u>.</html>
