--- a/freeplane/resources/translations/Resources_es.properties
+++ b/freeplane/resources/translations/Resources_es.properties
@@ -220,7 +220,7 @@ CopyAttributes.text=Copiar atributos
 CopyIDAction.text=Copiar la Identidad del Nodo
 CopyMapStylesAction.text=Copiar el estilo del mapa de...
 CopyNodeURIAction.text=Copiar la URL del nodo
-copyright=Copyright \u00A9 2000-2012 Equipo de Freeplane y otros
+copyright=Copyright \u00A9 2000-2014 Equipo de Freeplane y otros
 CopySingleAction.text=Copia Sencilla
 CopySingleAction.tooltip=Copiar s\u00F3lo el nodo seleccionado
 CopyStyleExtensionsAction.text=Copiar contenido del estilo
@@ -1065,7 +1065,7 @@ OptionPanel.load_last_map=Abrir autom\u00E1ticamente el \u00FAltimo mapa
 OptionPanel.load_last_map.tooltip=<html>Si est\u00E1 marcado, cuando Freeplane se inicia, carga el \u00FAltimo mapa abierto</html>
 OptionPanel.load_last_maps=Cargar todos los \u00FAltimos mapas
 OptionPanel.lookandfeel=Estilo y Apariencia (L&F)
-OptionPanel.lookandfeel.tooltip=<html> El Estilo y Apariencia (L&F) que se utilizar\u00E1. Est\u00E1n soportados \u201Cmetal\u201D, 'windows', 'motif', \u201Cgtk\u201D, \u201Cmac\u201D est\u00E1 disponible solamente en MacOS. Por defecto significa que se usa el look and feel por defecto. Si desea utilizar su propio L&F, incorporar por favor el nombre de la clase aqu\u00ED y asegurase que los archivos jar correspondientes est\u00E1n cargados. Si hay problemas con el L&F, entonces aqu\u00ED elegir  'nada' . Funciona con los applets </html>
+OptionPanel.lookandfeel.tooltip=<html> El Estilo y Apariencia (L&F) que se utilizar\u00E1. Est\u00E1n soportados \u2014metal\u2014, 'windows', 'motif', \u2014gtk\u2014, \u2014mac\u2014 est\u00E1 disponible solamente en MacOS. Por defecto significa que se usa el look and feel por defecto. Si desea utilizar su propio L&F, incorporar por favor el nombre de la clase aqu\u00ED y asegurase que los archivos jar correspondientes est\u00E1n cargados. Si hay problemas con el L&F, entonces aqu\u00ED elegir  'nada' . Funciona con los applets </html>
 OptionPanel.lt=Lt / Lituano
 OptionPanel.max_displayed_node_count=N\u00FAmero m\u00E1ximo de nodos mostrados
 OptionPanel.max_image_width=M\u00E1ximo inicial del ancho de la imagen
