--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -169,8 +169,8 @@ can_not_save_key_set=Nije mogu\u0107e pohraniti grupu tipkovni\u010Dkih kratica
 cancel=&Odustani
 CancelAction.text=&Odustani
 cannot_add_parent_diff_parents=Svi \u010Dvorovi moraju imati istog Roditelja za kori\u0161tenje ove funkcije.
-cannot_add_parent_to_root=Korijenski \u010Dvor nije mogu\u0107e dodati novom Roditelju
-cannot_delete_root=Korijenski \u010Dvor nije mogu\u0107e obrisati ili izrezati
+cannot_add_parent_to_root=Korijenski \u010Dvor nije mogu\u0107e dodati novom Roditelju.
+cannot_delete_root=Korijenski \u010Dvor nije mogu\u0107e obrisati ili izrezati.
 cannot_join_nodes_with_children=\u010Cvorove nije mogu\u0107e povezati s Djecom
 cannot_move_to_child=\u010Cvor nije mogu\u0107e pomaknuti prema \u010Dvoru njegove Djece.
 CenterAction.text=Sredina
@@ -213,14 +213,14 @@ connector_arrows=Zavr\u0161etak poveznika
 connector_label=Oznaka poveznika
 connector_lines=Vrsta crte poveznika
 connector_shapes=Oblik poveznika
-ConnectorColorAction.text=Boja poveznika
+ConnectorColorAction.text=Boja poveznika...
 CopyAction.text=Kopiraj
 CopyAction.tooltip=Kopiraj odabranu granu
 CopyAttributes.text=Kopiraj obilje\u017Eje
 CopyIDAction.text=Kopiraj ID \u010Dvora
 CopyMapStylesAction.text=Kopiraj stil mape...
 CopyNodeURIAction.text=Kopiraj URL (vezu) \u010Dvora
-copyright=Copyright \u00A9 2000-2012 Freeplane tim i ostali
+copyright=Copyright \u00A9 2000-2014 Freeplane tim i ostali
 CopySingleAction.text=Kopiraj pojedina\u010Dno
 CopySingleAction.tooltip=Kopiraj samo odabrani \u010Dvor
 CopyStyleExtensionsAction.text=Umetni stil povezanog sadr\u017Eaja
@@ -350,7 +350,7 @@ ExternalImage_popupMenu_Remove=Obri\u0161i
 ExternalImage_popupMenu_ResetZoom=Vrati izvorno pove\u0107anje
 ExternalImageAddAction.text=Dodaj vanjsku sliku...
 ExternalImageChangeAction.text=Promijeni vanjsku sliku...
-ExternalImageRemoveAction.text=Obri\u0161i sliku.
+ExternalImageRemoveAction.text=Obri\u0161i sliku
 ExtractLinkFromTextAction.text=Hiperlink iz teksta
 ExtractLinkFromTextAction.tooltip=Postavi hiperlink na\u0111en u tekstu \u010Dvora
 f_button_unassigned=nema akcije
@@ -441,7 +441,7 @@ FirstGroupNodeAction.text=Po\u010Detni \u010Dvor grupe
 fit_map_to_page=Prilagodi veli\u010Dini jedne stranice
 fit_map_to_page_height=Prilagodi visinu na jednu stranicu
 fit_map_to_page_width=Prilagodi \u0161irinu na jednu stranicu
-FitToPage.text=Prilagodi pove\u0107anje na &veli\u010Dinu zaslona.
+FitToPage.text=Prilagodi pove\u0107anje na &veli\u010Dinu zaslona
 FitToPage.tooltip=Prilagodi pove\u0107anje tako da se cijela Mentalna mapa smjesti u trenutni prozor.
 fold=Zatvori
 FoldAllAction.text=Sklopi sve
@@ -488,7 +488,7 @@ FreeplaneHelpStarter.text=Pomo\u0107...
 FreeplaneHelpStarter.tooltip=Pro\u0161irena pomo\u0107 Freeplanea
 GettingStartedAction.text=Vodi\u010D za podu\u010Davanje
 GotoLinkNodeAction.text=Idi na vezu
-GotoNodeAction.text=Idi na \u010Dvor sa ID brojem
+GotoNodeAction.text=Idi na \u010Dvor sa ID brojem...
 GrabKeyDialog.common.cancel=Odustani
 GrabKeyDialog.common.ok=U redu
 GrabKeyDialog.grab-key.assigned-to=Dod
@@ -727,8 +727,8 @@ ManageAddOnsDialog.tab.manage.themes=Teme
 ManageAddOnsDialog.tab.manage.themes.tooltip=Upravljanje temama
 ManageAddOnsDialog.tab.manage.tooltip=Upravljanje pro\u0161irenjima
 ManageAddOnsDialog.visit.addon.page=Posjeti web-stranicu sa pro\u0161irenjima...
-ManageConditionalStylesAction.text=&Upravljanje uvjetovanim stilovima mapa.
-ManageNodeConditionalStylesAction.text=U&pravljanje uvjetovanim stilovima \u010Dvora.
+ManageConditionalStylesAction.text=&Upravljanje uvjetovanim stilovima mapa
+ManageNodeConditionalStylesAction.text=U&pravljanje uvjetovanim stilovima \u010Dvora
 map_already_exists=Mapa ve\u0107 postoji. \u017Delite li prepisati preko postoje\u0107e mape?
 map_corrupted=Mapa je o\u0161te\u0107ena. \u017Delite li pogledati pojedinosti?
 map_load_error=Nije mogu\u0107e u\u010Ditati mapu: {0}
@@ -805,7 +805,7 @@ new=&Novi
 new_map_from_user_templates.text=Nova mapa...
 new_mindmap=Nova Mentalna mapa
 new_node=Novi \u010Dvor
-new_node_as_sibling_not_possible_for_the_root=Novi bratski \u010Dvor, nije mogu\u0107e kreirati kao korijenski \u010Dvor.
+new_node_as_sibling_not_possible_for_the_root=Novi bratski \u010Dvor, nije mogu\u0107e kreirati kao korijenski \u010Dvor
 new_version_available=Dostupna je nova verzija {0}' programa
 NewChildAction.text=Novi \u010Dvor - Dijete
 NewerFileRevisionsFoundDialog.cancel=&Presko\u010Di
@@ -866,8 +866,8 @@ NodeWidthAction.text=Postavke \u0161irine \u010Dvora
 nonboldify_branch=Poni\u0161ti podebljanje
 nonitalicise_branch=Poni\u0161ti uko\u0161enost
 normal=Uobi\u010Dajen
-not_saved_for_image_error=Mapa mora biti pohranjena prije postavljanja slike.
-not_saved_for_link_error=Mapa mora biti spremljena prije povezivanja datoteke preko pretra\u017Eiva\u010Da datoteka.
+not_saved_for_image_error=Mapa mora biti pohranjena prije postavljanja slike
+not_saved_for_link_error=Mapa mora biti spremljena prije povezivanja datoteke preko pretra\u017Eiva\u010Da datoteka
 note_window_location=Pozicija prozora bilje\u0161ki
 ok=&U redu
 OKAction.text=&Uredu
@@ -895,7 +895,7 @@ OptionPanel.always_fold_all_after_load=Sklopi sve
 OptionPanel.always_load_last_maps=U\u010Ditaj posljednje i nove mape
 OptionPanel.always_load_last_maps.tooltip=Otvara posljednje datoteke prema gore odabranim postavkama, \u010Dak i pokretanjem FP odabirom druge datoteke.
 OptionPanel.always_save_folding=Uvijek spremi
-OptionPanel.always_save_folding_state=Uvijek spremi promjene polo\u017Eaja sklopljenih i rasklopljenih \u010Dvorova.
+OptionPanel.always_save_folding_state=Uvijek spremi promjene polo\u017Eaja sklopljenih i rasklopljenih \u010Dvorova
 OptionPanel.always_save_folding_state.tooltip=Ova opcija \u0107e prilikom zatvaranja programa upozoriti na promijene izgleda stabla mape.
 OptionPanel.always_unfold_all_after_load=Rasklopi sve
 OptionPanel.antialias=Zagla\u0111ivanje
@@ -956,7 +956,7 @@ OptionPanel.default_browser_command_windows_nt=Zadani naredbeni preglednik Windo
 OptionPanel.default_browser_command_windows_nt.tooltip=<html>Za Windows NT (znaci "" su obavezni zbog veza,koji imaju "=" u svojem URL-u).</html>
 OptionPanel.default_charset=Skup znakova
 OptionPanel.Defaults=Zadano
-OptionPanel.delete_automatic_saves_at_exit=Kod izlaza obri\u0161i automatski spremljene datoteke.
+OptionPanel.delete_automatic_saves_at_exit=Kod izlaza obri\u0161i automatski spremljene datoteke
 OptionPanel.delete_automatic_saves_at_exit.tooltip=<html> Ako \u017Eelite obrisati automatski spremljene datoteke kod normalnog zatvaranja programa Freeplane, stavite kva\u010Dicu u potvrdnom okviru</html>
 OptionPanel.delete_nodes_without_question=\u017Delite li obrisati \u010Dvor(ove) bez potvrde?
 OptionPanel.delete_nodes_without_question.tooltip=Ako je polje odabrano \u010Dvorovi \u0107e biti obrisani bez potvrde. Ovo mo\u017Ee prouzro\u010Diti gubitak informacija ukoliko nismo pa\u017Eljivi kod brisanja.
@@ -1004,7 +1004,7 @@ OptionPanel.exported_image_resolution_dpi=Izvezena rezolucija slike (u DPI)
 OptionPanel.Files=Datoteke
 OptionPanel.first=Kao prvu
 OptionPanel.fold_on_click_inside=Rasklopi na klik unutar \u010Dvora
-OptionPanel.foldingsymbolwidth=Veli\u010Dina kru\u017Ei\u0107a sklopljenog \u010Dvora.
+OptionPanel.foldingsymbolwidth=Veli\u010Dina kru\u017Ei\u0107a sklopljenog \u010Dvora
 OptionPanel.foldingsymbolwidth.tooltip=<html>Veli\u010Dina kruga koji ozna\u010Dava sklapanje stabla</html>
 OptionPanel.fork=Ra\u010Dva
 OptionPanel.format_locale=Regija
@@ -1016,7 +1016,7 @@ OptionPanel.gl=Grendlanski
 OptionPanel.goto_note_end_on_edit=Pokaziva\u010D znaka (kursor) na kraju teksta bilje\u0161ke
 OptionPanel.grid_size=Veli\u010Dina mre\u017Ee pomaka \u010Dvora
 OptionPanel.groovy_editor_font=Oblik slova ure\u0111iva\u010Da Groovy sintakse
-OptionPanel.groovy_editor_font.tooltip=Koristi 'Dialog' ili 'Monospaced' ako trebate unicode tabele.
+OptionPanel.groovy_editor_font.tooltip=Koristi 'Dialog' ili 'Monospaced' ako trebate unicode tabele!
 OptionPanel.groovy_editor_font_size=Veli\u010Dina slova ure\u0111iva\u010Da Groovy sintakse
 OptionPanel.gtk=Gtk
 OptionPanel.hide_edge=Skriveni rubovi
@@ -1098,7 +1098,7 @@ OptionPanel.nodefontsize=Veli\u010Dina slova \u010Dvorova
 OptionPanel.nodeformat=Predlo\u017Eak / Oblik
 OptionPanel.nodeformat.tooltip=<html>Zamjena i/ili oblikovanje teksta:<ul><li><em>Predlo\u017Eak pro\u0161irenja:</em> <tt>%s</tt> je orginalni tekst, e.g. <tt>OPREZ: %s</tt><li><em>Oblikovanje brojeva i datuma:</em> Na primjer <tt>%.0</tt> format daje cijeli broj. Pogledaj <a href="http://download.oracle.com/javase/1.5.0/docs/api/java/util/Formatter.html#syntax">Formatter string syntax</a>.<li><em>Formule:</em> Pogledaj <a href="http://freeplane.sourceforge.net/wiki/index.php/Formulas">Freeplane Formulas documentation</a> za detalje.</ul></html>
 OptionPanel.nodenumbering=Dodavanje broja \u010Dvoru
-OptionPanel.nodenumbering.tooltip=Dodavanjae serijskog broja u tekst \u010Dvora (primjer - 1.3.1)
+OptionPanel.nodenumbering.tooltip=Dodavanje serijskog broja u tekst \u010Dvora (primjer - 1.3.1).
 OptionPanel.nodeshape=Stil \u010Dvora
 OptionPanel.nodeshape.tooltip=<html>Stil opisuje vanjski oblik \u010Dvora. <br>Mogu\u0107e vrijednosti:<br><table border="1"><tr><td>Ra\u010Dva: </td><td> \u010Dvor bez ruba,</td></tr><tr><td>Mjehuri\u0107: </td><td> \u010Dvor sa zaobljenim rubom,</td></tr><tr><td>Kao Roditelj: </td><td> stil se prenosi s roditeljskog \u010Dvora <br>ili zadani stil korijenskog \u010Dvora za korijenski \u010Dvor,</td></tr><tr><td>Kombinirano: </td><td> Mjehuri\u0107 kad je \u010Dvor rasklopljen, ra\u010Dva za ostalo.</td></tr></table></html>
 OptionPanel.nodetext=Tekst \u010Dvora
@@ -1238,7 +1238,7 @@ OptionPanel.show_icon_for_attributes=Prika\u017Ei ikone obilje\u017Eja
 OptionPanel.show_node_tooltips=Prika\u017Ei opis alata za \u010Dvorove
 OptionPanel.show_note_icons=Prika\u017Ei ikone bilje\u0161aka
 OptionPanel.show_styles_in_tooltip=Prika\u017Ei opis stila \u010Dvora
-OptionPanel.signed_script_are_trusted=Omogu\u0107i izvo\u0111enje potpisanih skripta (preporu\u010Deno)
+OptionPanel.signed_script_are_trusted=Omogu\u0107i izvo\u0111enje potpisanih skripta (preporu\u010Deno).
 OptionPanel.signed_script_are_trusted.tooltip=Ako skripte imaju povjerljiv potpis (npr. autora Freeplanea ili su vlastite), izvodit \u0107e se bez  ograni\u010Denja.
 OptionPanel.simplyhtml.default_paste_mode=Zadani na\u010Din lijepljenja
 OptionPanel.single_backup_directory=Koristi jedanu mapu (direktorij) za sigurnosne kopije
@@ -1250,8 +1250,9 @@ OptionPanel.single_instance_force=Izbjegni otvaranje datoteke u novom prozoru pr
 OptionPanel.single_instance_force.tooltip=Izbjegni otvaranje programa u novom prozoru \u010Dak iako ne postoji datoteka za u\u010Ditavanje
 OptionPanel.sk=Slova\u010Dki
 OptionPanel.sl=Slovenski
+OptionPanel.slow_scroll_selected_node=Sporo pomicanje do odabranog \u010Dvora
 OptionPanel.spelling_opt_case_sensitive=Osjetljiv na veli\u010Dinu (slova)
-OptionPanel.spelling_opt_ignore_all_caps_words=Zanemari rije\u010Di pisane VELIKIM SLOVIMA
+OptionPanel.spelling_opt_ignore_all_caps_words=Zanemari rije\u010Di pisane VELIKIM SLOVIMA.
 OptionPanel.spelling_opt_ignore_capitalization=Zanemari VELIKA SLOVA na po\u010Detku rije\u010Di
 OptionPanel.spelling_opt_ignore_words_with_numbers=Zanemari rije\u010Di koje sadr\u017Ee brojeve
 OptionPanel.spelling_opt_suggestions_limit_dialog=Maksimalan broj predlo\u017Eenih rje\u010Di u dijalogu
@@ -1264,7 +1265,7 @@ OptionPanel.standardcloudcolor=Boja obla\u010Di\u0107a
 OptionPanel.standardcloudcolor.tooltip=<html>Standardna boja obla\u010Di\u0107a u HTML zapisu </html>
 OptionPanel.standardcloudestyle=Stil obla\u010Di\u0107a
 OptionPanel.standardcloudestyle.tooltip=<html>Standardni stil obla\u010Di\u0107a. Trenutno je podr\u017Ean samo 'bezier' </html>
-OptionPanel.standarddrawrectangleforselection=Prika\u017Ei okvir za odabir \u010Dvora.
+OptionPanel.standarddrawrectangleforselection=Prika\u017Ei okvir za odabir \u010Dvora
 OptionPanel.standarddrawrectangleforselection.tooltip=<html>Odabrani \u010Dvor ima okvir sa zaobljenim uglovima oko sebe .</html>
 OptionPanel.standardlinkcolor=Boja veze sa strelicom
 OptionPanel.standardlinkcolor.tooltip=<html>Standardna boja veze sa strelicom u HTML zapisu </html>
@@ -1456,7 +1457,7 @@ save_unsaved_styles=\u017Delite li spremiti stilove?
 SaveAcceleratorPresetsAction.text=Pohrana grupe tipkovni\u010Dkih kratica F-trake\u2026
 SaveAction.text=&Spremi
 SaveAll.text=Spremi &sve otvoerne datoteke
-SaveAll.tooltip=Spremi sve otvorene mape.
+SaveAll.tooltip=Spremi sve otvorene mape
 SaveAsAction.text=Spremi kao...
 saved=Spremljeno
 saving_canceled=Spremanje otkazano
@@ -1763,6 +1764,7 @@ UnfoldAllAction.text=Rasklopi sve
 UnfoldAllAction.tooltip=<html> Rasklopi sve odabrane \u010Dvorove i njihovu Djecu.</html>
 UnfoldOneLevelAction.text=Rasklopi jednu razinu
 UnfoldOneLevelAction.tooltip=Rasklopi odabrane \u010Dvorove za jednu razinu.
+unparsedLatexPatternFormat=Neobra\u0111en LaTeX
 up=&Gore
 UpConditionAction.text=Gore
 update_failed=Nadogradnja neuspjela s porukom {0}
