--- a/freeplane/resources/translations/Resources_zh_CN.properties
+++ b/freeplane/resources/translations/Resources_zh_CN.properties
@@ -219,7 +219,7 @@ CopyAttributes.text=\u590d\u5236\u5c5e\u6027(&a)
 CopyIDAction.text=\u590d\u5236\u8282\u70b9ID
 CopyMapStylesAction.text=\u4ece...\u5bfc\u56fe\u6837\u5f0f\u590d\u5236
 CopyNodeURIAction.text=\u590d\u5236\u8282\u70b9URI
-copyright=Copyright \u00a9 2000-2012 Freeplane team and others
+copyright=Copyright \u00a9 2000-2014 Freeplane team and others
 CopySingleAction.text=\u5355\u4E00\u590D\u5236
 CopySingleAction.tooltip=\u53ea\u590d\u5236\u9009\u4e2d\u8282\u70b9
 CopyStyleExtensionsAction.text=\u4ece\u6837\u5f0f\u8282\u70b9\u590d\u5236\u6269\u5c55
@@ -670,7 +670,7 @@ LatexInsertLatexAction.text=\u65b0\u589eLaTeX\u516c\u5f0f
 less_than_two_selected_nodes=\u81f3\u5c11\u5fc5\u987b\u9009\u62e9\u4e24\u4e2a\u8282\u70b9\u8fdb\u884c\u8fde\u63a5\u3002
 license=\u8bb8\u53ef
 license_text=<html>This program is free software; you can redistribute it and/or<br>modify it under the terms of the GNU General Public License<br>as published by the Free Software Foundation; either version 2<br>of the License, or (at your option) any later version.<br><br>This program is distributed in the hope that it will be useful,<br>but WITHOUT ANY WARRANTY; without even the implied warranty of<br>MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the<br>GNU General Public License for more details.<br><br>You should have received a copy of the GNU General Public License<br>along with this program; if not, write to the Free Software<br>Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-link_error=\u9519\u8bef\u8fde\u63a5\u201c{0}\u201d\u6ca1\u6709\u52a0\u8f7d
+link_error=\u9519\u8bef\u8fde\u63a5\u2014{0}\u2014\u6ca1\u6709\u52a0\u8f7d
 link_not_available_any_more=\u8fde\u63a5\u4e0d\u518d\u6709\u6548\u3002\u8282\u70b9\u5df2\u5220\u9664\u3002
 link_not_found=\u94FE\u63A5 {0} \u672A\u53D1\u73B0.
 load=\u52a0\u8f7d(&L)
@@ -1032,7 +1032,7 @@ OptionPanel.label_font_size=\u5B57\u4F53\u5927\u5C0F
 OptionPanel.language=\u8BED\u8A00
 OptionPanel.language.tooltip=<html>\u7A0B\u5E8F\u6240\u7528\u8BED\u8A00. '\u81EA\u52A8' \u5C06\u5C1D\u8BD5\u52A0\u8F7D\u5F53\u524D\u7528\u6237\u7684\u8BED\u8A00. </html>
 OptionPanel.last=\u6700\u540E
-OptionPanel.last_opened_list_length=\u201C\u6700\u8FD1\u7684\u6587\u4EF6\u201D\u5217\u8868\u957F\u5EA6
+OptionPanel.last_opened_list_length=\u2014\u6700\u8FD1\u7684\u6587\u4EF6\u2014\u5217\u8868\u957F\u5EA6
 OptionPanel.layout_map_on_text_change=\u7f16\u8f91\u65f6\u66f4\u65b0\u601d\u7ef4\u5bfc\u56fe
 OptionPanel.layout_map_on_text_change.tooltip=\u4e0d\u4f7f\u7528\u6765\u83b7\u5f97\u66f4\u597d\u7684\u6027\u80fd
 OptionPanel.linear=\u76f4\u7ebf
@@ -1249,7 +1249,7 @@ OptionPanel.structured_html_import=\u5c06HTML\u5bfc\u5165\u4e3a\u8282\u70b9\u7ed
 OptionPanel.structured_icon_toolbar=\u7ed3\u6784\u5316\u56fe\u6807\u5de5\u5177\u6761
 OptionPanel.summary=\u6458\u8981
 OptionPanel.sv=\u745E\u5178\u8BED
-OptionPanel.text.use_ctrl_key=\u4ece\u5de5\u5177\u83dc\u5355\u4e2d\u4f7f\u7528\u2018\u6307\u5b9a\u5feb\u6377\u65b9\u5f0f\u2019
+OptionPanel.text.use_ctrl_key=\u4ece\u5de5\u5177\u83dc\u5355\u4e2d\u4f7f\u7528\u2014\u6307\u5b9a\u5feb\u6377\u65b9\u5f0f\u2014
 OptionPanel.time_for_automatic_save=\u81EA\u52A8\u4FDD\u5B58\u95F4\u9694
 OptionPanel.time_for_automatic_save.tooltip=<html> \u4E24\u6B21\u81EA\u52A8\u4FDD\u5B58\u76F4\u63A5\u7684\u65F6\u95F4 (\u6BEB\u79D2): \u8BBE\u7F6E 2000000000\u65F6\u81EA\u52A8\u4FDD\u5B58\u88AB\u7981\u6B62.</html>
 OptionPanel.time_for_delayed_selection=\u5EF6\u8FDF\u9009\u4E2D\u65F6\u95F4
@@ -1263,7 +1263,7 @@ OptionPanel.tr=\u571F\u8033\u5176\u8BED
 OptionPanel.uk_UA=\u4e4c\u514b\u5170\u8bed
 OptionPanel.undefined_font=\u672A\u5B9A\u4E49\u7684\u5B57\u4F53
 OptionPanel.undo_levels=\u64A4\u9500\u6B21\u6570
-OptionPanel.undo_levels.tooltip=<html>\u51B3\u5B9A\u5B58\u50A8\u201C\u64A4\u9500\u201D\u7684\u6700\u5927\u6B65\u6570.</html>
+OptionPanel.undo_levels.tooltip=<html>\u51B3\u5B9A\u5B58\u50A8\u2014\u64A4\u9500\u2014\u7684\u6700\u5927\u6B65\u6570.</html>
 OptionPanel.unfold_on_paste=\u7C98\u8D34\u65F6\u5C55\u5F00\u8282\u70B9
 OptionPanel.unfold_on_paste.tooltip=\u7C98\u8D34\u6216\u62D6\u653E\u65F6\u5C55\u5F00\u8282\u70B9
 OptionPanel.use_common_out_point_for_root_node=\u4ECE\u6839\u8282\u70B9\u5F00\u59CB\u8FDE\u7EBF
@@ -1439,7 +1439,7 @@ scripting_api_generator_proxy=Proxy
 scripting_api_generator_title=Scripting API
 scripting_api_generator_utilities=Utilities
 scripting_api_generator_web=Web Resources
-select_favorites_folder=\u9009\u62E9\u201C\u6536\u85CF\u5939\u201D\u6240\u5728\u7684\u76EE\u5F55
+select_favorites_folder=\u9009\u62E9\u2014\u6536\u85CF\u5939\u2014\u6240\u5728\u7684\u76EE\u5F55
 select_file_export_to=\u9009\u62e9\u8981\u5bfc\u51fa\u5230\u7684\u6587\u4ef6
 select_folder_for_importing=\u9009\u62E9\u5BFC\u5165\u7684\u76EE\u5F55
 select_icon=\u9009\u62e9\u56fe\u6807
