--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -1047,6 +1047,7 @@ OptionPanel.language=Langue de l'utilisateur
 OptionPanel.language.tooltip=<html>Langue de l'application.<br>La valeur 'automatique' d\u00E9tecte et utilise la langue du syst\u00E8me.
 OptionPanel.last=En bas
 OptionPanel.last_opened_list_length=Nombre de fichiers dans la liste des fichiers r\u00E9cents
+OptionPanel.latex_disable_editor.tooltip=Cochez cette case si vous avez des difficult\u00E9s avec l'\u00E9diteur LaTeX
 OptionPanel.layout_map_on_text_change=Rafra\u00EEchir la position des n\u0153uds pendant la saisie
 OptionPanel.layout_map_on_text_change.tooltip=Sur un ordinaiteur peu performant, il est recommand\u00E9 de d\u00E9sactiver cette option
 OptionPanel.linear=Droit
@@ -1217,7 +1218,7 @@ OptionPanel.separator.tooltip=Info-bulles
 OptionPanel.separator.undo=Annulation
 OptionPanel.separator.updates=Mise \u00E0 jour du programme
 OptionPanel.set_property_text=Personnalis\u00E9
-OptionPanel.set_property_text.tooltip=D\u00E9cocher r\u00E9tablit la mise en forme du style
+OptionPanel.set_property_text.tooltip=D\u00E9cochez : supprime la mise en forme personnalis\u00E9e et r\u00E9tablit le style appliqu\u00E9 au n\u0153ud
 OptionPanel.setscript=Ex\u00E9cuter
 OptionPanel.setscript.tooltip=Un script peut \u00EAtre associ\u00E9 au mod\u00E8le.
 OptionPanel.sharp_bezier=Courbe effil\u00E9
@@ -1238,6 +1239,7 @@ OptionPanel.single_instance_force=Toujours utiliser une seule instance du progra
 OptionPanel.single_instance_force.tooltip=Toujours utiliser une seule instance du programme m\u00EAme s'il n'y a aucun fichier \u00E0 ouvrir
 OptionPanel.sk=Slovaque
 OptionPanel.sl=Slov\u00E8ne
+OptionPanel.slow_scroll_selected_node=D\u00E9filement doux jusqu'au n\u0153ud s\u00E9lectionn\u00E9
 OptionPanel.spelling_opt_case_sensitive=Sensible \u00E0 la casse
 OptionPanel.spelling_opt_ignore_all_caps_words=Ignorer les mots en majuscule
 OptionPanel.spelling_opt_ignore_capitalization=Ignorer les mots d\u00E9butant par une majuscule
